--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ strong {
         </details>   
 </li>
   <li class="spacer">
-    <strong>Yuma Noritomo.</strong> <a href="file/draft_drought_humancapital_260110_EJ.pdf" target="_blank">Does the timing of productivity shocks in childhood affect educational attainment?</a> <i>Submitted</i>
+    <strong>Yuma Noritomo.</strong> <a href="file/draft_drought_humancapital_260110_EJ.pdf" target="_blank">Does the timing of productivity shocks in childhood affect educational attainment?</a> [Kanematsu Award, Nishijima Award] <i>Submitted</i>
    <div class="details-row">
     <details>
       <summary>Abstract</summary>
@@ -128,13 +128,14 @@ strong {
         in low-income settings.
       </p>
     </details>
-
+<!-- 
     <details>
       <summary>Awards</summary>
       <p>Kanematsu Award, Nishijima Award</p>
     </details>
   </div>
-</li> <li class="spacer">
+</li>
+ <li class="spacer"> -->
     <strong>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid.</strong> Site selection causes bias in policy-oriented social science. <i>Submitted</i>
   </li>
 </ul>
