--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@ strong {
     <details>
       <summary>Awards</summary>
       <p>Kanematsu Award, Nishijima Award</p>
-    </details>
+    </details>-->
   </div>
 </li>
- <li class="spacer"> -->
+ <li class="spacer"> 
     <strong>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid.</strong> Site selection causes bias in policy-oriented social science. <i>Submitted</i>
   </li>
 </ul>
