--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ strong {
     <strong>Yuma Noritomo, Karlijn Morsink, and Kelvin Shikuku.</strong> Trading off human capital versus productive asset investment: perceptions of risk and return.
    <details>
            <summary>Funding</summary> 
-          <p> International Research Travel Grants (Einaudi Center), Research Travel Grant (Graduate School, Cornell University)*2, Academic Enrichment Program (Cornell CALS), Graduate Research Funding (The Center for the Study of Inequality)  </p> 
+          <p> Chester O. McCorkle, Jr. Student Scholarship (AAEA), International Research Travel Grants (Einaudi Center), Research Travel Grant (Graduate School, Cornell University)*2, Academic Enrichment Program (Cornell CALS), Graduate Research Funding (The Center for the Study of Inequality)  </p> 
         </details>   
   </li>
     <li class="spacer">
