--- a/index.html
+++ b/index.html
@@ -87,10 +87,12 @@ strong {
         <img src="file/Yuma_cows.jpg" alt="Profile Picture" class="profile-pic" />
       <div>
         <h3>Yuma Noritomo</h3>
+        <div class="profile"></div>
                 <p> I’m a PhD student in Development Economics at Dyson, Cornell. I visited PSE and Wageningen.  </p>
                 <p> Advisors: Chris Barrett, Brian Dillon, Johannes Haushofer, and Karlijn Morsink </p>
                 <p> Email: yn266[at]cornell.edu. </p>
                 <p> My research focuses on strategies to reduce chronic poverty and suffering by promoting human capital accumulation in low-income, challenging environments. </p>                        
+      </div>
       </div>
     </div>
     <h4> Work in Progress</h4>
