--- a/index.html
+++ b/index.html
@@ -87,11 +87,21 @@ strong {
         <img src="file/Yuma_cows.jpg" alt="Profile Picture" class="profile-pic" />
       <div>
         <h3>Yuma Noritomo</h3>
-                 I’m a PhD student in Development Economics at Dyson, Cornell. I visited PSE and Wageningen. <br>
-                 Advisors: Chris Barrett, Brian Dillon, Johannes Haushofer, and Karlijn Morsink <br>
-                 Email: yn266[at]cornell.edu. <br>
-                 My research focuses on strategies to reduce chronic poverty and suffering by promoting human capital accumulation in low-income, challenging environments.                         
-      </div>
+         <p class="profile__lead">
+      I’m a PhD student in Development Economics at Dyson, Cornell. I visited PSE and Wageningen.
+    </p>
+
+    <p class="profile__meta">
+      <span class="label">Advisors:</span> Chris Barrett, Brian Dillon, Johannes Haushofer, and Karlijn Morsink
+    </p>
+    <p class="profile__meta">
+      <span class="label">Email:</span> yn266[at]cornell.edu
+    </p>
+
+    <p class="profile__desc">
+      My research focuses on strategies to reduce chronic poverty and suffering by promoting human capital accumulation in low-income, challenging environments.
+    </p>
+        </div>
     </div>
     <h4> Work in Progress</h4>
 <ul>
