this should be better
this should be better

--- a/index.html
+++ b/index.html
@@ -94,9 +94,7 @@ strong {
       My research focuses on strategies to reduce chronic poverty and suffering by promoting human capital accumulation in low-income, challenging environments.
     </p>
     <p>
-      <span class="label">Advisors:</span> Chris Barrett, Brian Dillon, Johannes Haushofer, and Karlijn Morsink
-    </p>
-    <p>
+      <span class="label">Advisors:</span> Chris Barrett, Brian Dillon, Johannes Haushofer, and Karlijn Morsink <br>
       <span class="label">Email:</span> yn266[at]cornell.edu
     </p>
 
