--- a/index.html
+++ b/index.html
@@ -86,16 +86,15 @@ strong {
     <div class="header">
         <img src="file/Yuma_cows.jpg" alt="Profile Picture" class="profile-pic" />
       <div>
-        <h3>Yuma Noritomo</h3>
+        <h3>Yuma Noritomo</h3> (yn266[at]cornell.edu)
          <p class="profile__lead">
-      I’m a PhD student in Development Economics at Dyson, Cornell. I visited PSE and Wageningen.
+      I’m a 4th year PhD student in <strong>development economics</strong> at Dyson, Cornell. <!-- I visited PSE and Wageningen. -->
     </p>
     <p class="profile__desc">
-      My research focuses on strategies to reduce chronic poverty and suffering by promoting human capital accumulation in low-income, challenging environments.
+      My research studies challenges to <strong>human capital investment</strong> that hinder escape from poverty—such as child labor and child marriage—in low-income, high-risk environments, and evaluates policies to reduce these forms of suffering.
     </p>
     <p>
       <span class="label">Advisors:</span> Chris Barrett, Brian Dillon, Johannes Haushofer, and Karlijn Morsink <br>
-      <span class="label">Email:</span> yn266[at]cornell.edu
     </p>
 
 
