--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ strong {
     <div class="header">
         <img src="file/Yuma_cows.jpg" alt="Profile Picture" class="profile-pic" />
       <div>
-        <h3>Yuma Noritomo</h3> (yn266[at]cornell.edu)
-         <p class="profile__lead">
+        <h3>Yuma Noritomo</h3> 
+    <p class="profile__lead">
       I’m a 4th year PhD student in <strong>development economics</strong> at Dyson, Cornell. <!-- I visited PSE and Wageningen. -->
     </p>
     <p class="profile__desc">
