--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ strong {
       <div>
         <h3>Yuma Noritomo</h3> 
     <p class="profile__lead">
-      I’m a 4th year PhD student in <strong>development economics</strong> at Dyson, Cornell. <!-- I visited PSE and Wageningen. -->
+      I’m a fourth-year PhD student in development economics at Dyson, Cornell, advised by Chris Barrett, Brian Dillon, Johannes Haushofer, and Karlijn Morsink. <!-- I visited PSE and Wageningen. -->
     </p>
     <p class="profile__desc">
       My research studies challenges to <strong>human capital investment</strong> that hinder escape from poverty—such as child labor and child marriage—in low-income, high-risk environments, and evaluates policies to reduce these forms of suffering.
