--- a/index.html
+++ b/index.html
@@ -150,8 +150,9 @@ strong {
 <ul>
     <li class="spacer">
     <strong>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne.</strong> <a href="file/WD_SriLanka_yn.pdf">Restricting mothers' international migration and human capital investment.</a> <i> World Development</i>, 2026, Vol. 200, 107284.
+   [<a href="https://www.sophia.ac.jp/jpn/article/news/release/260203_th/">Press-release</a>]
   </li>
-  <li class="spacer">
+   <li class="spacer">
     <strong>Jensen et al. (2025).</strong> <a href="https://www.sciencedirect.com/science/article/pii/S0306919225001149">Index-based livestock insurance to support pastoralists against droughts.</a> <i> Food Policy</i>, 137, 102909.
   </li>
   <li class="spacer">
