--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ strong {
         </details>   
 </li>
   <li class="spacer">
-    <strong>Yuma Noritomo.</strong> <a href="file/draft_drought_humancapital_260110_EJ.pdf" target="_blank">Does the timing of productivity shocks in childhood affect educational attainment?</a> [Kanematsu Award, Nishijima Award] <i>Submitted</i>
+    <strong>Yuma Noritomo.</strong> <a href="file/draft_drought_humancapital_260110_EJ.pdf" target="_blank">Does the timing of productivity shocks in childhood affect educational attainment?</a> [<a href="https://www.rieb.kobe-u.ac.jp/en/edu-society/kanematsu_prize/index.html"> Kanematsu Award, Nishijima Award</a>]  <i>Submitted</i>
    <div class="details-row">
     <details>
       <summary>Abstract</summary>
@@ -150,13 +150,14 @@ strong {
 <ul>
     <li class="spacer">
     <strong>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne.</strong> <a href="file/WD_SriLanka_yn.pdf">Restricting mothers' international migration and human capital investment.</a> <i> World Development</i>, 2026, Vol. 200, 107284.
-   [<a href="https://www.sophia.ac.jp/jpn/article/news/release/260203_th/">Press-release</a>]
+   [<a href="https://www.sophia.ac.jp/eng/article/news/release/260203_th/">Press release</a>]
   </li>
    <li class="spacer">
     <strong>Jensen et al. (2025).</strong> <a href="https://www.sciencedirect.com/science/article/pii/S0306919225001149">Index-based livestock insurance to support pastoralists against droughts.</a> <i> Food Policy</i>, 137, 102909.
   </li>
   <li class="spacer">
     <strong>Yuma Noritomo and Kazushi Takahashi (2020).</strong> <a href="https://www.tandfonline.com/doi/full/10.1080/00220388.2020.1736281">Can insurance payouts prevent a poverty trap? Evidence from randomised experiments in northern Kenya</a>, <i>The Journal of Development Studies</i>, 56(11), 2079-2096.
+   [<a href="https://www.lightstone.co.jp/contest/contest2018_results.html">Light Stone Awards</a>]
   </li>
   <li class="spacer">
     <strong>Kazushi Takahashi, Yuma Noritomo, Munenobu Ikegami, and Nathaniel D. Jensen (2020).</strong> <a href="https://www.sciencedirect.com/science/article/pii/S0306919220301147">Understanding pastoralists' dynamic insurance uptake decisions: Evidence from four-year panel data in Ethiopia</a>, <i>Food Policy</i>, 95, 101910.
