--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ strong {
         </details>   
 </li>
   <li class="spacer">
-    <strong>Yuma Noritomo.</strong> <a href="file/draft_drought_humancapital_260110_EJ.pdf" target="_blank">Does the timing of productivity shocks in childhood affect educational attainment?</a> [<a href="https://www.rieb.kobe-u.ac.jp/en/edu-society/kanematsu_prize/index.html"> Kanematsu Award, Nishijima Award</a>]  <i>Submitted</i>
+    <strong>Yuma Noritomo.</strong> <a href="file/draft_drought_humancapital_260110_EJ.pdf" target="_blank">Does the timing of productivity shocks in childhood affect educational attainment? </a>[<a href="https://www.rieb.kobe-u.ac.jp/en/edu-society/kanematsu_prize/index.html">Kanematsu Award, Nishijima Award</a>] <i>Submitted</i>
    <div class="details-row">
     <details>
       <summary>Abstract</summary>
@@ -156,7 +156,7 @@ strong {
     <strong>Jensen et al. (2025).</strong> <a href="https://www.sciencedirect.com/science/article/pii/S0306919225001149">Index-based livestock insurance to support pastoralists against droughts.</a> <i> Food Policy</i>, 137, 102909.
   </li>
   <li class="spacer">
-    <strong>Yuma Noritomo and Kazushi Takahashi (2020).</strong> <a href="https://www.tandfonline.com/doi/full/10.1080/00220388.2020.1736281">Can insurance payouts prevent a poverty trap? Evidence from randomised experiments in northern Kenya</a>, <i>The Journal of Development Studies</i>, 56(11), 2079-2096.
+    <strong>Yuma Noritomo and Kazushi Takahashi (2020).</strong> <a href="https://www.tandfonline.com/doi/full/10.1080/00220388.2020.1736281">Can insurance payouts prevent a poverty trap? Evidence from randomised experiments in northern Kenya</a>, <i>Journal of Development Studies</i>, 56(11), 2079-2096.
    [<a href="https://www.lightstone.co.jp/contest/contest2018_results.html">Light Stone Awards</a>]
   </li>
   <li class="spacer">
